# gpg-verify

./: .gitignore  import_gpg.py  pyproject.toml
.github/workflows/: pre-commit.yml
